<resources>
    <string name="app_name">Demeter</string>
    <string name="etiqueta_correo">Correo electrónico</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_iniciar_sesion">Iniciar sesión</string>
    <string name="etiqueta_facebook">Continuar con Facebook</string>
    <string name="etiqueta_google">Continuar con Google</string>
    <string name="etiqueta_registro_interrogante">¿No tienes registro? <b>Registrate</b></string>
    <string name="etiqueta_inicio_sesion_interrogante">¿Ya tienes una? <b>Inicia sesión</b></string>
    <string name="etiqueta_registro">Registrar</string>
    <string name="etiqueta_continuar">Continuar</string>

    <string name="etiqueta_nombres">Nombres completos</string>
    <string name="etiqueta_apellido_materno">Apellido materno</string>
    <string name="etiqueta_apellido_paterno">Apellido paterno</string>
    <string name="etiqueta_dni">Documento de identidad</string>
    <string name="etiqueta_telefono">Número de teléfono</string>
    <string name="etiqueta_nombre_tarjeta">Nombre en tarjeta</string>
    <string name="etiqueta_numero_tarjeta">Numero de tarjeta</string>
    <string name="etiqueta_fecha_expiracion">Expiración</string>
    <string name="etiqueta_cvv">CVV</string>

</resources>