<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".autenticacion.RegistroActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:srcCompat="@drawable/black_cat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCorreoR"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/etiqueta_correo"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputContrasenaR"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/etiqueta_contrasena"
                android:inputType="textPassword"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/botones_background"
            android:text="@string/etiqueta_registro"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etiqueta_inicio_sesion_interrogante"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>