<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datos.MetodoPagoActivity">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/externoCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#8F4545"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/internoCard"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="#1AFFFFFF"
                android:orientation="vertical"
                android:translationX="10dp">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="60dp" />

                <TextView
                    android:id="@+id/txtNumero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="32sp"
                    tools:text="@string/etiqueta_numero_tarjeta" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="2"
                            android:text="VENCE FIN DE"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtExpiracion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/etiqueta_fecha_expiracion"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="2"
                            android:text="@string/etiqueta_cvv"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txtCVV"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/etiqueta_cvv"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etiqueta_nombre_tarjeta"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombreTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etiqueta_nombre_tarjeta"
                android:maxLength="25"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNumeroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/etiqueta_numero_tarjeta"
                android:maxLength="16"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputExpiracionTarjeta"
                        android:layout_width="155dp"
                        android:layout_height="55dp"
                        android:hint="Expiración MM/AA"
                        android:inputType="datetime"
                        android:maxLength="5" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCVV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/etiqueta_cvv"
                        android:maxLength="3"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnGuardarTarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/botones_background"
            android:text="@string/etiqueta_continuar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>